--- a/index.html
+++ b/index.html
@@ -59,10 +59,18 @@
         async function predict() {
             // predict can take in an image, video or canvas html element
             const prediction = await model.predict(webcam.canvas);
-            for (let i = 0; i < maxPredictions; i++) {
-                const classPrediction =
-                    prediction[i].className + ": " + prediction[i].probability.toFixed(2);
-                labelContainer.childNodes[i].innerHTML = classPrediction;
+            // for (let i = 0; i < maxPredictions; i++) {
+            //     const classPrediction =
+            //         prediction[i].className + ": " + prediction[i].probability.toFixed(2);
+            //     labelContainer.childNodes[i].innerHTML = classPrediction;
+            // }
+
+            if(prediction[0].probability.toFixed(2) >= 0.9) {
+                labelContainer.childNodes[0].innerHTML = prediction[i].className;
+            } else if(prediction[1].probability.toFixed(2) >= 0.9) {
+                labelContainer.childNodes[1].innerHTML = prediction[i].className;
+            } else if(prediction[2].probability.toFixed(2) >= 0.9) {
+                labelContainer.childNodes[2].innerHTML = prediction[i].className;
             }
         }
     </script>
